--- a/_posts/2019-07-04-the-us-narrative-today.html
+++ b/_posts/2019-07-04-the-us-narrative-today.html
@@ -2582,107 +2582,107 @@ stories:
   domain: http://www.gbtribune.com/
   link: https://www.gbtribune.com/news/local-news/city-start-collecting-eighth-street-project/
 images:
-- name: nyc-flag-nycflag-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-matrix.jpg
-- name: oldhouse-oldhouse-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dark-dali.jpg
-- name: oldhotel-oldhotel-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dark-rain.jpg
-- name: oldtrain-oldtrain-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-alberto-giacometti.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-aqua.jpg
-- name: fence-mexico-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-colorful-dream.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-alberto-giacometti.jpg
-- name: oldhousecars-house-old-cars-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-purple-pond.jpg
-- name: trucksilo-trucksilo-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-yellow-paper.jpg
-- name: cargo-ship-cargo-ship-on-sea-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-crafty-painting.jpg
-- name: sand-hand-sand-hand-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-gan-vogh.jpg
-- name: copper-circuit-IMG_7072.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7072.jpg
-- name: fence-mexico-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-smoking-cigarette.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-monet-one.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-crafty-painting.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-crafty-painting.JPG
-- name: mediterranean-mediterranean-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-kand-two.jpg
-- name: carry-load-carryload-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-cinnamon-rolls.jpg
-- name: store-on-corner-store-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-colorful-dream.jpg
-- name: scream-DSC_0079.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0079.jpg
-- name: old-granary-field-granaryfield-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-plentiful.jpg
-- name: old-church-oldchurch-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-colored-circuits.jpg
-- name: cargo-ship-cargo-ship-on-sea-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-post-modern.jpg
-- name: machine-road-machine-road-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-spagetti-accident.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
-- name: curtain-curtain-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-ww2-dresden.jpg
-- name: nyc-flag-nycflag-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-post-modern.jpg
-- name: san-francisco-street-view-san-francisco-street-view-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-dali.jpg
-- name: oldroad-old-road-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-crabapple.jpg
-- name: wreck-DSC_0076.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-DSC_0076.jpg
-- name: berlinwall2-berlinwall-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-emily-carr.jpg
-- name: old-door-lock-old-door-lock-2-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-oily-mcoilface.jpg
-- name: lincoln-memorial-lincolnmemorial-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-light-dali.jpg
-- name: gears-4882162452-fa3126b38d-b-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-marcel-duchamp.jpg
-- name: old-cabin-oldcabin-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-yellow-collage.jpg
-- name: abandonedbuildings_dry_skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dry_skin.jpg
-- name: oldtrain-oldtrain-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-diego-rivera1.jpg
-- name: razorwire-DSC-0080-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dark-rain.jpg
-- name: abandonedbuildings_atari_asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_atari_asteroids.jpg
-- name: birdhouse-birdhouse-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-atari-asteroids.jpg
-- name: mediterranean-mediterranean-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-smooth-ride.jpg
-- name: bluelake-cinnamon-rolls-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-cinnamon-rolls-file-00-00-38-67.jpg
-- name: bluelake-plentiful-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-plentiful-file-00-00-38-67.jpg
-- name: yosemite-yosemite-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-emily-carr.jpg
-- name: cargo-ship-cargo-ship-on-sea-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colored-circuits.jpg
-- name: capital-dc-flag-side-view-uncle-sam.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-dc-flag-side-view-uncle-sam.jpg
-- name: nyc-flag-nycflag-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-circuit.jpg
-- name: school-clouds-church-clouds-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-dream.jpg
-- name: school-clouds-church-clouds-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-feed-people.jpg
-- name: subway-subway-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-colorful-dream.jpg
-- name: birdhouse-birdhouse-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-matrix.jpg
-- name: locked-up-steam-lock-up-steam-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-ww2-color.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dry-skin.jpg
+- name: docks-docks-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-ww2-color.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-creativity.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-creativity.png
+- name: soldier-kneeling-26304845730-d4e495e25f-o-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-cinnamon-rolls.jpg
+- name: copper-circuit-IMG_4746.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_4746.jpg
+- name: lincoln-memorial-lincolnmemorial-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-spagetti-accident.jpg
+- name: berlinwall-DSC-0084-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crunch-paper.jpg
+- name: stories-beachclouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-beachclouds-clean-view.jpg
+- name: school-clouds-church-clouds-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-creativity.jpg
+- name: border-crossing-bordercrossing-dark-rain.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dark-rain.png
+- name: bluelake-dry-skin-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dry-skin-file-00-00-38-67.jpg
+- name: school-clouds-church-clouds-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-crunch-paper.jpg
+- name: subway-subway-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-cinnamon-rolls.jpg
+- name: stories-new-16-77-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-16-77-800-500-0-max-0-1--1.jpg
+- name: walled-garden-walled-garden-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-graham-sutherland.jpg
+- name: oldhotel-oldhotel-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-purple-storm.jpg
+- name: window-window-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-neo-instinct.jpg
+- name: ellis-island-ellis-island-room-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-neo-instinct.jpg
+- name: adam-smith-adam-smith-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-post-modern.jpg
+- name: walled-garden-walled-garden-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-gan-vogh.jpg
+- name: blossombar-rainbow-festival-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-rainbow-festival-file-00-00-50-62.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dali-three.jpg
+- name: rockingchair-rockingchair-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-atari-missle.jpg
+- name: abe-lincoln-one-sand-paper-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sand-paper-file-00-00-07-91.jpg
+- name: mosaic-face-mosaic-face-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-colorful-blocks.jpg
+- name: sand-hand-sand-hand-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-purp-paper.jpg
+- name: meadowbutterfly-meadow-butterfly-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-monet-one.jpg
+- name: status-berlin-status-berlin-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-atari-missle.jpg
+- name: downtheline-downtheline-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purp-paper.jpg
+- name: server-cloud-server-racks-clouds-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-umberto-bocc.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
+- name: aws-s3-stories-power-lines-empty-space-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-power-lines-empty-space-copper-circuit.jpg
+- name: oldhotel-oldhotel-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crafty-painting.jpg
+- name: lincoln-memorial-lincolnmemorial-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-oily-mcoilface.jpg
+- name: aws-s3-stories-new-32-161-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-32-161-800-500-0-max-0--5--1.jpg
+- name: dc-statue-dcstatue-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-emily-carr.jpg
+- name: border-fence-border-fence-on-hill-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-crafty-painting.jpg
+- name: birdhouse-birdhouse-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-far-away.jpg
+- name: old-barn-old-barn-1500-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-rain.jpg
+- name: supreme-court-supremecourt-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-internet-numbers.jpg
+- name: old-granary-field-oldhouse-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-yellow-paper.jpg
+- name: san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
+- name: walled-garden-walled-garden-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-colored-circuits.jpg
+- name: capital-battle-capitolbattle-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purple-pond.jpg
+- name: yuma-bank-yuma-bak-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-cinnamon-rolls.jpg
+- name: catacombs-catacombs-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-spagetti-accident.jpg
+- name: docks-docks-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-clean-view.jpg
+- name: store-on-corner-store-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-neo-instinct.jpg
+- name: old-door-lock-old-door-lock-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dali-two.jpg
+- name: lincoln-memorial-lincolnmemorial-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-yellow-paper.jpg
+- name: downtown-los-angeles-downtown-la-alberto-giacometti.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-alberto-giacometti.JPG
 ---
 India's Economy Likely To Grow 7%, Government Says.&nbsp;Dont Let Summer Pests Bug You.&nbsp;Beach Safety Reminders From Charleston County Parks.&nbsp;Seismologist Explains Rolling Sensation From Earthquakes.&nbsp;New Freedom Chicken To Ride In Sisters Honor In Glen Alpine Parade.&nbsp;Drunk Driving Suspected In Crash That Kills Little Boy.&nbsp;Where The Sidewalk Ends U2026.&nbsp;Las Vegas Police Fire Officer Who Hesitated During Mass Shooting.&nbsp;
